plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'hyundai'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    /* [ Spring Web ] */
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    /* [ Swagger ] Spring Doc 2.6.0  */
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.6.0'

    /* [ Spring Data JPA ]*/
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    /* [ Spring Security ] */
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    /* [ Spring oauth2 client ] */
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'    // oauth

    /* [ Gson ] */
    implementation 'com.google.code.gson:gson:2.10.1'

    /* [ JWT ] */
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    /* [ Lombok ] */
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    /* [ MySQL ] */
    runtimeOnly 'com.mysql:mysql-connector-j'

    /* [ Query DSL ] */
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}

// Querydsl 설정 - generated 폴더 설정 및 소스 디렉토리에 추가
def querydslSrcDir = file("src/main/generated")

sourceSets {
    main.java.srcDirs += querydslSrcDir
}

clean {
    delete querydslSrcDir
}

tasks.withType(JavaCompile) {
    options.annotationProcessorGeneratedSourcesDirectory = querydslSrcDir
}
